--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://124.221.74.27:3306/epidemic?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 
+mybatis.mapper-locations=classpath:mapper/*.xml
