--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+<!--        //Jquery依赖-->
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
