--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
