--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,9 @@ spring.datasource.password=123456
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+spring.session.store-type=redis
+spring.redis.host=124.221.74.27
+spring.redis.port=6379
+spring.redis.password=yangjin0831
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
